tests/snapshots/codegen_snapshot_tests__dict_operations.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 1546
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let mut data: std::collections::HashMap<String, i64> = std::collections::HashMap::new();
    data.insert("one".to_string(), 1);
    data.insert("two".to_string(), 2);
    for key in data.keys() {
        let _ = println!("{}", key);
    }
}
fn main() {
    main();
}
