tests/snapshots/codegen_snapshot_tests__empty_list_string_arg.snap
---
source: tests/codegen_snapshot_tests.rs
assertion_line: 2590
expression: normalize_projected_symbols_for_snapshot(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn count_names(names: Vec<String>) -> i64 {
    return ::std::convert::identity(names.len() as i64);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    return count_names(vec![]);
}
fn main() {
    main();
}
